syntax = "proto3";

package user.v1alpha;

option go_package = "stubs";

import "google/protobuf/timestamp.proto";
import "user/v1alpha/message.proto";

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Update (UpdateRequest) returns (UpdateResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
}

